objects/agf__ADM_Time_Off_Log__c.object
<CustomObject>
    <fields>
        <fullName>agf__Allocation__c</fullName>
        <defaultValue>1</defaultValue>
        <inlineHelpText>Percentage of time allocated to the PTOn project between the PTOn Start date and End date.</inlineHelpText>
        <label>Allocation %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>agf__Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox gets checked once a PTon request has been approved by the requestee&apos;s manager.</description>
        <label>Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>agf__Days__c</fullName>
        <description>Number of actual days planned for PTOn project.</description>
        <inlineHelpText>Enter the number of actual days you plan to spend on your PTOn.</inlineHelpText>
        <label>Days</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>agf__Description__c</fullName>
        <inlineHelpText>Describe your PTOn project or Out of Office in this field.</inlineHelpText>
        <label>Description</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>agf__End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>agf__External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>agf__Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>agf__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Time_Off_Log</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Out Of Office Log</label>
    <listViews>
        <fullName>agf__All_Out_of_Office</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>agf__Allocation__c</columns>
        <columns>agf__Days__c</columns>
        <columns>agf__Start_Date__c</columns>
        <columns>agf__End_Date__c</columns>
        <columns>agf__User__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Out of Office</label>
    </listViews>
    <listViews>
        <fullName>agf__CompanyHolidays</fullName>
        <columns>NAME</columns>
        <columns>agf__Start_Date__c</columns>
        <columns>agf__End_Date__c</columns>
        <columns>agf__Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>agf__ADM_Time_Off_Log__c.agf__CompanyHoliday</value>
        </filters>
        <label>Company Holidays</label>
    </listViews>
    <listViews>
        <fullName>agf__PTOn</fullName>
        <columns>NAME</columns>
        <columns>agf__User__c</columns>
        <columns>agf__Description__c</columns>
        <columns>agf__Start_Date__c</columns>
        <columns>agf__End_Date__c</columns>
        <columns>agf__Allocation__c</columns>
        <columns>agf__Days__c</columns>
        <columns>agf__Approved__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>agf__ADM_Time_Off_Log__c.agf__PTOn</value>
        </filters>
        <label>PTOn</label>
    </listViews>
    <nameField>
        <displayFormat>PTO-{0000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Out Of Office Logs</pluralLabel>
    <recordTypes>
        <fullName>agf__CompanyHoliday</fullName>
        <active>true</active>
        <description>Use to add company holidays into the system</description>
        <label>Company Holiday</label>
    </recordTypes>
    <recordTypes>
        <fullName>agf__OutofOffice</fullName>
        <active>true</active>
        <description>Time out of the office away from the Scrum Team.</description>
        <label>Out of Office</label>
    </recordTypes>
    <recordTypes>
        <fullName>agf__PTOn</fullName>
        <active>true</active>
        <description>PTOn (Paid Time ON) time spent working on a project external to the Scrum Team.</description>
        <label>PTOn (Paid Time On)</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>agf__Start_Date_before_End_Date</fullName>
        <active>true</active>
        <errorConditionFormula>agf__Start_Date__c &gt; agf__End_Date__c</errorConditionFormula>
        <errorDisplayField>agf__Start_Date__c</errorDisplayField>
        <errorMessage>The start date should always be before or same day as the End date</errorMessage>
    </validationRules>
</CustomObject>